--- a/vercel.json
+++ b/vercel.json
@@ -1,48 +1,52 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node",
-        "config": {
-          "includeFiles": ["config/**", "controllers/**", "middleware/**", "models/**", "routes/**", "socket/**", "utils/**", "uploads/**"]
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["config/**", "controllers/**", "middleware/**", "models/**", "routes/**", "socket/**", "utils/**"]
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "server.js"
+    }
+  ],
+  "env": {
+    "PORT": "3000",
+    "NODE_ENV": "production"
+  },
+  "functions": {
+    "runtime": {
+      "node": {
+        "version": "18.x"
+      }
+    }
+  },
+  "headers": [
+    {
+      "source": "/auth/status",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "https://mv-live.netlify.app"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PUT, DELETE, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
+        },
+        {
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
         }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "server.js"
-      }
-    ],
-    "env": {
-      "PORT": "5000",
-      "NODE_ENV": "production"
-    },
-    "functions": {
-      "nodeVersion": "18.x"
-    },
-    "headers": [
-      {
-        "source": "/auth/status",
-        "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "https://mv-live.netlify.app"
-          },
-          {
-            "key": "Access-Control-Allow-Methods",
-            "value": "GET, POST, PUT, DELETE, OPTIONS"
-          },
-          {
-            "key": "Access-Control-Allow-Headers",
-            "value": "Content-Type, Authorization"
-          },
-          {
-            "key": "Access-Control-Allow-Credentials",
-            "value": "true"
-          }
-        ]
-      }
-    ]
-  }
+      ]
+    }
+  ]
+}
