Fix vercel.json schema by correcting functions.runtime

--- a/vercel.json
+++ b/vercel.json
@@ -20,11 +20,7 @@
     "NODE_ENV": "production"
   },
   "functions": {
-    "runtime": {
-      "node": {
-        "version": "18.x"
-      }
-    }
+    "runtime": "18.x" 
   },
   "headers": [
     {
