--- a/vercel.json
+++ b/vercel.json
@@ -20,7 +20,10 @@
     "NODE_ENV": "production"
   },
   "functions": {
-    "runtime": "18.x" 
+    "runtime": {
+      "main": "server.js",
+      "version": "18.x"
+    }
   },
   "headers": [
     {
